# wolfz-player

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/control/logic/: MusicLoader.cpp  MusicLoader.h  PlayerController.cpp  PlayerController.h
src/control/service/: ExtractMetadata.cpp  ExtractMetadata.h  MetadataManager.cpp  MetadataManager.h  PlaylistService.cpp  PlaylistService.h  ShowInfo.cpp  ShowInfo.h
src/control/service/uimodel/: HistoryModel.cpp  HistoryModel.h  PlaylistModel.cpp  PlaylistModel.h  QueueModel.cpp  QueueModel.h
src/data/model/: LoopMode.h  Song.cpp  Song.h
src/data/player/: MusicPlayer.cpp  MusicPlayer.h
src/data/playlist/: History.cpp  History.h  Playlist.cpp  Playlist.h  Queue.cpp  Queue.h
src/ui/: Main.qml  resources.qrc  resources.rc
src/ui/components/: AppMenu.qml  ChoosePlaylistDialog.qml  ConfirmDeletePlaylistDialog.qml  CreatePlaylistDialog.qml  CustomButton.qml  DialogManager.qml  IconButton.qml  ImageRounded.qml  ProgressBar.qml
src/ui/subviews/: About.qml  CoverArtView.qml  GroupPanel.qml  HistoryTab.qml  Library.qml  QueueTab.qml
src/ui/subviews/maincontent/: HistoryTab.qml  LyricsTab.qml  QueueTab.qml
src/ui/subviews/maincontent/grouppanel/: HistoryTab.qml  QueueTab.qml
src/ui/views/: MainContent.qml  PlayerBar.qml  SideBar.qml  TopBar.qml
